--- a/tests/max7219.yaml
+++ b/tests/max7219.yaml
@@ -37,9 +37,7 @@ display:
     cs_pin: D8
     num_chips: 4
     lambda: |-      
-      it.strftime(1, 0, id(digit_font), "%H:%M", id(hass_time).now());
-      it.image(24, 0, id(my_image));
-      it.line(1,7,21,7);
+      it.strftime(0, 0, id(digit_font), "%H:%M%a", id(hass_time).now());
 
 font:
   - file: "pixelmix.ttf"
