--- a/tests/max7219.yaml
+++ b/tests/max7219.yaml
@@ -41,6 +41,7 @@ display:
     lambda: |-      
       it.strftime(0, 0, id(digit_font), "%H:%M%a", id(hass_time).now());
       it.scroll_left(1);
+      it.invert_on_off();
 
 font:
   - file: "pixelmix.ttf"
