--- a/tests/max7219.yaml
+++ b/tests/max7219.yaml
@@ -40,7 +40,8 @@ display:
     intensity: 15
     lambda: |-      
       it.strftime(0, 0, id(digit_font), "%H:%M%a", id(hass_time).now());
-      it.scroll_left(1);
+      it.invert_on_off();
+      it.print(0, 0, id(digit_font),"  :  ");
       it.invert_on_off();
 
 font:
