--- a/tests/max7219.yaml
+++ b/tests/max7219.yaml
@@ -39,7 +39,7 @@ display:
     offset: 10
     intensity: 15
     lambda: |-      
-      it.printf(0, 0, id(digit_font),TextAlign::TOP_LEFT, "12345" );
+      it.printf(0, 0, id(digit_font_ss),TextAlign::TOP_LEFT, "123 5" );
       it.scroll_left(3);
 
 font:
@@ -49,6 +49,12 @@ font:
   - file: "pixelmix_bold.ttf"
     id: digitbolt_font
     size: 8
+  - file: "pixelmix_ss.ttf"
+    id: digit_font_ss
+    size: 8
+
+
+
 
 time:
   - platform: homeassistant
