--- a/tests/max7219.yaml
+++ b/tests/max7219.yaml
@@ -42,19 +42,15 @@ display:
     offset: 10
     intensity: 15
     lambda: |-      
-      it.printf(0, 0, id(digit_font_ss),TextAlign::TOP_LEFT, "123 5" );
-      it.scroll_left(3);
-font:
-  - file: "pixelmix.ttf"
-    id: digit_font
-    size: 8
-  - file: "pixelmix_bold.ttf"
-    id: digitbolt_font
-    size: 8
-  - file: "pixelmix_ss.ttf"
-    id: digit_font_ss
-    size: 8
+      it.image_loop(0,0,bell_L,bell_M,bell_R);
 
+image:
+  - file: "bellleft.png"
+    id: bell_L
+  - file: "bellright.png"
+    id: bell_R
+  - file: "bellmiddle.png"
+    id: bell_M
 
 
 
